[gd_scene load_steps=5 format=3 uid="uid://bx0jfcu4kxs70"]

[ext_resource type="Texture2D" uid="uid://h1824n1iqa50" path="res://img/score.png" id="1_5mq0x"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="1_m877u"]
[ext_resource type="Texture2D" uid="uid://ceigtao7mmbdv" path="res://img/pause_button.png" id="2_20hfc"]

[sub_resource type="LabelSettings" id="LabelSettings_ojmmf"]
font_size = 34
font_color = Color(0.000113828, 0.000113828, 0.000113828, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_m877u")

[node name="ColorRectBckgr" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.117647)

[node name="TopBar" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="TopBar"]
layout_mode = 0
offset_left = 2.0
offset_top = 11.0
offset_right = 396.0
offset_bottom = 70.0
texture = ExtResource("1_5mq0x")
expand_mode = 1

[node name="ScoreLabekl" type="Label" parent="TopBar"]
layout_mode = 0
offset_left = 32.0
offset_top = 15.0
offset_right = 328.0
offset_bottom = 72.0
text = "999999999"
label_settings = SubResource("LabelSettings_ojmmf")
horizontal_alignment = 2
vertical_alignment = 1

[node name="PauseButton" type="TextureButton" parent="TopBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -77.0
offset_bottom = 78.0
grow_horizontal = 0
texture_normal = ExtResource("2_20hfc")
stretch_mode = 3

[connection signal="pressed" from="TopBar/PauseButton" to="." method="_on_pause_button_pressed"]
